--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Solar power for your community">
+    <meta name="robots" content="index,follow">
+    <link rel="icon" href="./assets/icon/solar_sun_green_energy_panel_eco_renewable_energy_icon_129016.svg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <title>Solar Power</title>
 </head>
 <body>
-    
+    <!--Navigation-->
+    <div class="navbar">
+        <div class="container">
+            <a href="#" class="logo">Solar Power</a>
+            <img id="menu-cta" src="./assets/icon/menu.svg" alt="Burger Navigation">
+            <nav>
+                <img id="exit" src="./assets/icon/exit.svg" alt="Exit Navigation">
+                <ul>
+                    <li class="current"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#themes">Themes</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <!--Hero Section-->
+    <section class="hero">
+
+    </section>                               
+    <section>
+
+    </section>                               
+    <section>
+
+    </section>                               
+   <script src="./app.js"></script> 
 </body>
-</html>
+</html>  
