--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Solar power for your community">
     <meta name="robots" content="index,follow">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="icon" href="./assets/icon/solar_sun_green_energy_panel_eco_renewable_energy_icon_129016.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Solar Power</title>
 </head>
@@ -33,13 +34,13 @@
     <section class="hero">
         <div class="container">
             <h1>Solar Power</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis ducimus. Inventore et quae culpa corporis quisquam iure alias eius ipsam, at earum tempora eos sequi.!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis ducimus!</p>
             <div class="hero-cta"><a class="primary-cta" href="#">Learn More</a></div>
         </div>
     </section>                         
     <section class="info-section">
         <img class="power-img" src="./assets/img/power.png" alt="Illustration of the world">
-        < class="container">
+        <div class="container">
         <h1>About</h1>  
         <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo.</p>                         
         <p class="info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo.</p>                         
@@ -66,7 +67,7 @@
        </div> 
     </section> 
     <footer>
-        
+
     </footer>                              
    <script src="./app.js"></script> 
 </body>
