Added more information & changes to the css file

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <!--Hero Section-->
     <section class="hero">
         <div class="container">
-            <h1>Solar Power</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis ducimus!</p>
+            <h1 class="display-5 fw-bold">Solar Power</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis ducimus!</p>
             <div class="hero-cta"><a class="primary-cta" href="#">Learn More</a></div>
         </div>
     </section>                         
