More features added

--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
         </div>
     </section>                         
     <section class="info-section">
-        <img class="power-img" src="./assets/img/power.png" alt="Illustration of the world">
+        <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
         <div class="container">
-        <h1>About</h1>  
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo.</p>                         
-        <p class="info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo.</p>                         
-        <p class="info3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo.</p> <a href="#">Read More</a>
+        <h1>About</h1>
+        <div class="row align-items-start">
+        <div class="col"> 
+        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo.</p>
     </div>
+      
+    <div class="col">                    
+        <p class="info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita enim a consequatur iste! In, repudiandae autem? Quisquam officiis incidunt officia provident, voluptate commodi id eligendi exercitationem fuga consectetur, asperiores amet aperiam sit nostrum minus tempora sapiente consequuntur! Odio iste eligendi vitae sunt eos? Quidem nam optio blanditiis minus nostrum reprehenderit numquam itaque enim libero vel quo, voluptatum impedit. Placeat, explicabo. <a class="info-link" href="https://www.energysage.com/solar/" target="_blank" role="link">Read More</a></p> 
+    </div>
+</div>  
 </div>
     </section>                               
     <section class="contact-section">
