Added more tweaks to the paragraphs in each section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="display-5 fw-bold">Solar Power</h1>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis ducimus!</p>
+            <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
             <a class="hero-cta" href="#about" role="button">Learn More</a>
         </div>
     </section>                         
@@ -42,11 +42,13 @@
         <div class="container">
         <h1>About</h1>
         <div class="row align-items-start">
-        <div class="col"> 
+        <div class="col">
+            <h3>How does Solar Energy Work</h3> 
         <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, animi quis ducimus accusamus esse inventore minus hic ea omnis minima quisquam magnam cumque rerum consequatur amet maxime ipsam in veniam ab saepe! Ea provident explicabo molestias harum exercitationem necessitatibus ab. Quibusdam, culpa iure corrupti dicta pariatur sit molestiae libero, tempora harum fugit cumque repudiandae odio nam delectus ratione illo eius distinctio? Consectetur itaque laboriosam voluptatem iste nam, modi quaerat possimus ipsum facere, tempore magni consequatur asperiores? Amet, temporibus laborum officia modi quaerat, excepturi numquam id, porro fugiat voluptas necessitatibus natus illo voluptatem. Saepe voluptate nobis dolorum commodi quos ad, quis facere pariatur! Dicta nisi amet veritatis repellendus magnam mollitia, sed ex officia eligendi error, quibusdam corrupti! Debitis distinctio necessitatibus animi beatae molestiae natus quisquam fugiat excepturi, odit non quia consequatur quidem porro labore magni vitae doloribus incidunt, placeat earum illum sunt, laboriosam dolore rerum magnam! Distinctio recusandae, amet aut ducimus optio aliquid quod mollitia ipsum et itaque excepturi dolore architecto tenetur voluptatem! Neque inventore voluptas, iure eaque corporis quibusdam delectus adipisci nihil rem obcaecati aliquid quisquam dolorem similique perferendis suscipit officia fugit velit nulla asperiores, consectetur hic repudiandae odio. Aspernatur ab provident iusto laboriosam quaerat exercitationem tempore libero expedita? Magnam maxime explicabo ad eum animi numquam quidem doloribus expedita quam libero veritatis debitis corrupti tenetur molestias id, magni earum fugit. Adipisci iusto sunt ipsum nesciunt explicabo laboriosam, obcaecati fugiat rem molestias veritatis. Saepe enim voluptas, itaque repellendus assumenda fuga mollitia optio? Asperiores inventore earum delectus culpa enim molestias rem quasi.</p>
     </div>
       
-    <div class="col">                    
+    <div class="col">
+        <h3>New Power Source</h3>                    
         <p class="info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quam ullam, ea blanditiis delectus cum corrupti, voluptas dolorum commodi id cumque fugit odio officia iste placeat numquam quo earum nobis suscipit dignissimos nulla est explicabo! Unde autem nesciunt maiores quos perferendis quisquam vitae, officia repellendus distinctio voluptate deserunt eligendi! Beatae, sit facilis iste accusantium harum veritatis voluptatibus ipsam laboriosam suscipit fugiat sequi. Odit at libero delectus asperiores iure sunt aspernatur repudiandae voluptatum recusandae sint! Aliquam asperiores voluptas earum vitae est ab quas nam quo accusamus temporibus veritatis recusandae dolores tempore, enim molestiae velit aut, ea quis porro accusantium consequuntur non sapiente. A reiciendis nihil adipisci ipsum ullam, aut aperiam voluptatum dolorem repudiandae illo consequuntur veritatis, perferendis voluptas accusamus assumenda blanditiis? Architecto sed pariatur, consectetur itaque distinctio dolore, explicabo aliquam cupiditate eveniet laborum quis delectus perferendis, fugiat aliquid ullam voluptatem. Vitae minima iusto quaerat reiciendis accusamus, doloribus repudiandae corrupti provident alias rerum itaque similique dolores numquam recusandae explicabo deserunt eos porro tempore voluptate! Recusandae quasi voluptatum amet. Voluptas, incidunt commodi. Dolorum neque officiis saepe numquam recusandae tempore, quasi, et sequi sunt alias cumque ad, iusto non. Quisquam unde eum earum incidunt corporis ratione, porro quo pariatur iusto voluptatem eaque quidem! Iste tempora alias quo consequuntur quae enim! Tempore debitis ex nisi, beatae temporibus voluptatibus nobis molestiae perspiciatis recusandae adipisci mollitia officiis assumenda, voluptatem voluptate voluptas illo autem, sapiente vel laborum pariatur ratione? Impedit, eum saepe. Dignissimos dicta quod vel fugit reiciendis consequatur sequi, doloremque ipsum illum, expedita corrupti minus! Ratione, molestias. <a class="info-link" href="https://www.energysage.com/solar/" target="_blank" role="link">Read More</a></p> 
     </div>
 </div>  
@@ -55,7 +57,7 @@
     <section id="contact" class="contact-section">
         <div class="contact-form">
        <div class="wrap-contact100">
-           <form class="contact100-form validate-form">
+           <form class="contact100-form validate-form" action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
                <span class="contact100-form-title">Contact Us</span>
                <div class="wrap-input100 validate-input" data-validate="Please enter your name">
 
