Centered the form with more slight tweaks

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
             <a class="hero-cta" href="#about" role="button">Learn More</a>
         </div>
-    </section>                         
+    </section>
+    <!--About Section-->                         
     <section id="about" class="info-section">
         <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
         <div class="container">
@@ -70,14 +71,16 @@ Given that solar panels can only produce power when the sun is shining, storing 
     </div>
 </div>  
 </div>
-    </section>                               
+    </section> 
+    <!--Contact Section-->                              
     <section id="contact" class="contact-section">
-           <form class="contact100-form validate-form" action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
+           <form class="contact-form" action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
+            <div class="container">
             <div class="form-title">Contact</div>
-            <div class="form-floating">
+            <div class="mb-3">
             <input type="text" name="name" id="name" placeholder="Enter Your Name..." required>
         </div>
-        <div class="form-floating">
+        <div class="mb-3">
             <input type="email" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter Your Email here:" required>
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
@@ -85,6 +88,7 @@ Given that solar panels can only produce power when the sun is shining, storing 
             <textarea name="message" id="message" placeholder="Enter your Message here..." required></textarea>
         </div>
         <button class="w-30 btn btn-lg btn-primary" type="submit">Submit</button>
+    </div>
     </form>
     </section> 
     <!--Footer inspiration from last project-->
