--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@ Given that solar panels can only produce power when the sun is shining, storing 
             <div class="container">
             <div class="form-title">Contact</div>
             <div class="mb-3">
-            <input type="text" name="name" id="name" placeholder="Enter Your Name..." required>
+            <input type="text" name="name" id="name" placeholder="Name:" required>
         </div>
         <div class="mb-3">
-            <input type="email" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter Your Email here:" required>
+            <input type="email" name="email" id="email" aria-describedby="emailHelp" placeholder="Email:" required>
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div>
-            <textarea name="message" id="message" placeholder="Enter your Message here..." required></textarea>
+            <textarea name="message" id="message" placeholder="Your Message:" required></textarea>
         </div>
-        <button class="w-30 btn btn-lg btn-primary" type="submit">Submit</button>
+        <button class="form-btn" type="submit">Submit</button>
     </div>
     </form>
     </section> 
