--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@ Given that solar panels can only produce power when the sun is shining, storing 
         <div>
             <textarea name="message" id="message" placeholder="Your Message:" required></textarea>
         </div>
+        <div class="container-btn">
         <button class="form-btn" type="submit">Submit</button>
+    </div>
     </div>
     </form>
     </section> 
