--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
             <a class="hero-cta" href="#about" role="button">Learn More</a>
         </div>
+        <div class="toggle-container">
+            <input class="toggle-btn" type="checkbox" name="theme" id="switch"><label for="switch">Toggle</label>
+        </div>
     </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
@@ -78,10 +81,10 @@ Given that solar panels can only produce power when the sun is shining, storing 
             <div class="container">
             <div class="form-title">Contact</div>
             <div class="mb-3">
-            <input type="text" name="name" id="name" placeholder="Name:" required>
+            <input  class="area1" type="text" name="name" id="name" placeholder="Name:" required>
         </div>
         <div class="mb-3">
-            <input type="email" name="email" id="email" aria-describedby="emailHelp" placeholder="Email:" required>
+            <input class="area2" type="email" name="email" id="email" aria-describedby="emailHelp" placeholder="Email:" required>
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div>
