--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
     <link rel="stylesheet" href="./style.css">
     <title>Solar Power</title>
 </head>
-<body>
-    < class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+<body data-spy="scroll" data-bs-target="#navbar" data-offset="110">
     <!--Navigation-->
-    <div class="navbar fixed-top">
-        <div class="container">
-            <a href="#" class="logo">Solar Power</a>
-            <img id="menu-cta" class="menu" src="./assets/icon/menu.svg" alt="Burger Navigation">
-            <nav id="nav" class="nav nav-masthead justify-content-center float-md-end">
-                <img id="exit" class="exit" src="./assets/icon/exit.svg" alt="Exit Navigation">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#about">About</a>
-                    <a  class="nav-link" href="#contact">Contact</a>
+    <nav id="nav" class="navbar fixed-top navbar-expand-sm">
+                <div class="container-fluid"> 
+                <a href="#" class="navbar-brand">Solar Power</a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a  class="nav-link" href="#contact">Contact</a></li>
+                        
+                </ul>
+                </div>
             </nav>
-        </div>
     </div>
     <!--Hero Section-->
     <section class="hero">
