More changes to the Navigation menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body data-spy="scroll" data-bs-target="#navbar" data-offset="110">
     <!--Navigation-->
-    <nav id="nav" class="navbar fixed-top navbar-expand-sm">
+    <nav id="nav" class="navbar fixed-top navbar-expand-sm" style="background-color: #c87155">
                 <div class="container-fluid"> 
                 <a href="#" class="navbar-brand">Solar Power</a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
