--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Solar power for your community">
     <meta name="robots" content="index,follow">
+    <meta name="author" content="Solar Power">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="./assets/icon/solar_sun_green_energy_panel_eco_renewable_energy_icon_129016.svg">
@@ -14,25 +15,33 @@
     <link rel="stylesheet" href="./style.css">
     <title>Solar Power</title>
 </head>
-<body data-spy="scroll" data-bs-target="#navbar" data-offset="110">
+<body data-bs-spy="scroll" data-bs-target="#navbarText" data-offset="50" tabindex="0">
     <!--Navigation-->
-    <nav id="nav" class="navbar fixed-top navbar-expand-sm" style="background-color: #c87155">
+    <header>
+    <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #c87155;">
                 <div class="container-fluid"> 
                 <a href="#" class="navbar-brand">Solar Power</a>
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a  class="nav-link" href="#contact">Contact</a></li>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a  class="nav-link" href="#contact">Contact</a>
+                        </li>
                         
                 </ul>
                 </div>
+            </div>
             </nav>
-    </div>
+        </header>
     <!--Hero Section-->
-    <section class="hero">
+    <section id="home" class="hero">
         <div class="container">
             <h1 class="display-5 fw-bold">Solar Power</h1>
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
@@ -124,6 +133,9 @@ Given that solar panels can only produce power when the sun is shining, storing 
         </div>
 
     </footer>                              
-   <script src="./app.js"></script> 
+   <script src="./app.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script> 
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
 </html>  
