--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body data-bs-spy="scroll" data-bs-target="#navbarText" data-offset="50" tabindex="0">
     <!--Navigation-->
     <header>
-    <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #c87155;">
+    <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark">
                 <div class="container-fluid"> 
                 <a href="#" class="navbar-brand">Solar Power</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
