Add switch button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
             <a class="hero-cta" href="#about" role="button">Learn More</a>
         </div>
-        
+        <button id="switch" onclick="toggleTheme()">Switch</button>
     </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
