Add credit/content information to Readme.md

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
             <a class="hero-cta" href="#about" role="button">Learn More</a>
         </div>
+        <!--Theme Switch button-->
+        <!--Credits found in Readme file-->
         <button id="switch" onclick="toggleTheme()">Switch</button>
     </section>
     <!--About Section-->                         
