Add Click Listener for function button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </div>
         <!--Theme Switch button-->
         <!--Credits found in Readme file-->
-        <button id="switch" onclick="toggleTheme()">Switch</button>
+        <label id="switch"><input type="checkbox" onchange="toggleTheme()" id="slider"><span class="slider round"></span></label>
+        <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
     </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
