Add toggle button : From label/input to button

--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
         <div class="container">
             <h1 class="display-5 fw-bold">Solar Power</h1>
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
+            <!--Theme Switch button-->
+        <!--Credits found in Readme file-->
+            <button id="switch" onclick="toggleTheme()">Magic Button</button>
             <a class="hero-cta" href="#about" role="button">Learn More</a>
         </div>
-        <!--Theme Switch button-->
-        <!--Credits found in Readme file-->
-        <label id="switch"><input type="checkbox" onchange="toggleTheme()" id="slider"><span class="slider round"></span></label>
-        <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
     </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
