Change hero title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--Hero Section-->
     <section id="home" class="hero">
         <div class="container">
-            <h1 class="display-5 fw-bold">Solar Power</h1>
+            <h1 class="display-5 fw-bold">Solar energy that opens opportunities for you & your surrounding.</h1>
             <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
             <!--Theme Switch button-->
         <!--Credits found in Readme file-->
