Major tweaks to the hero title

--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
     <!--Hero Section-->
     <section id="home" class="hero">
         <div class="container">
-            <h1 class="display-5 fw-bold">Solar energy that opens opportunities for you & your surrounding.</h1>
-            <p class="lead">Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</p>
-            <!--Theme Switch button-->
-        <!--Credits found in Readme file-->
+            <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding. 
+            <h4> Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</h4>
             <button id="switch" onclick="toggleTheme()">Magic Button</button>
-            <a class="hero-cta" href="#about" role="button">Learn More</a>
+            <a class="hero-cta" href="#about" role="button">Learn More</a>  
         </div>
-    </section>
+        </div>
+      </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
         <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
