Add tweaks to titles across the sections

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <!--Hero Section-->
     <section id="home" class="hero">
         <div class="container">
-            <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding. 
-            <h4> Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</h4>
+            <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding.
+            <h4 class="hero-p"> Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</h4>
             <button id="switch" onclick="toggleTheme()">Magic Button</button>
             <a class="hero-cta" href="#about" role="button">Learn More</a>  
         </div>
@@ -55,7 +55,7 @@
     <section id="about" class="info-section">
         <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
         <div class="container">
-        <h1>About</h1>
+        <h2>About</h2>
         <div class="row align-items-start">
         <div class="col">
             <h3>How does Solar Energy Work</h3> 
