Align about paragraph text

--- a/index.html
+++ b/index.html
@@ -54,23 +54,26 @@
     <!--About Section-->                         
     <section id="about" class="info-section">
         <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
-        <div class="container">
         <h2>About</h2>
-        <div class="row align-items-start">
-        <div class="col">
+    <div class="float-container">
+        <div class="float-child">
+            <div class="box-1">
             <h4>How does Solar Energy Work</h4> 
         <p class="info">A solar panel also known as a solar module consists of a layer of silicon cells, a metal frame, a glass casing unit, and wiring to transfer electric current from the silicon. When light hits a silicon cell, the light causes electrons in the silicon to be set in motion, initiating a flow of electric current. This is known as the “photovoltaic effect,” and it describes the general functionality of solar panel tech.</p>
     </div>
-      
-    <div class="col">
-        <h4>New Power Source</h4>                    
-        <p class="info2">Solar energy is a clean, inexpensive, renewable power source that is harnessable nearly everywhere in the world - any point where sunlight hits the surface of the earth is a potential location to generate solar power. And since solar energy comes from the sun, it represents a limitless source of power. Renewable energy technologies generate electricity from resources that are infinite. Compare, for instance, producing electricity with renewable resources to doing so with fossil fuels. <a class="info-link" href="https://www.energysage.com/solar/" target="_blank" role="link">Read More</a></p> 
     </div>
-</div>  
+    <div class="float-child">
+        <div class="box-2">
+        <h4>New Power Source</h4>                    
+        <p class="info2">Solar energy is a clean, inexpensive, renewable power source that is harnessable nearly everywhere in the world - any point where sunlight hits the surface of the earth is a potential location to generate solar power. And since solar energy comes from the sun, 
+        it represents a limitless source of power. Renewable energy technologies generate electricity from resources that are infinite. Compare, for instance, producing electricity with renewable resources to doing so with fossil fuels. <a class="info-link" href="https://www.energysage.com/solar/" target="_blank" role="link">Read More</a></p> 
+    </div>
+    </div>
 </div>
     </section> 
-    <!--Contact Section-->                              
+    <!--Contact Section-->                            
     <section id="contact" class="contact-section">
+        <div class="container">
            <form class="contact-form" action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
             <div class="container">
             <div class="form-title">Contact</div>
@@ -89,7 +92,8 @@
     </div>
     </div>
     </form>
-    </section> 
+    </section>
+</div>  
     <!--Footer inspiration from last project-->
     <footer class="footer bg bg-dark">
         <div class="container-fluid">
