Add image to hero section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
             </nav>
         </header>
     <!--Hero Section-->
+    <main>
     <section id="home" class="hero">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img class="d-block mx-lg-auto img-fluid" src="./assets/img/panel.svg" width="700" height="500" loading="lazy" alt="biking to the panel">
+                </div>
         <div class="container">
             <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding.
             <h4 class="hero-p"> Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</h4>
@@ -50,7 +56,10 @@
             <a class="hero-cta" href="#about" role="button">Learn More</a>  
         </div>
         </div>
+    </div>
+            </div>
       </section>
+      </main>
     <!--About Section-->                         
     <section id="about" class="info-section">
         <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
