Update readme file

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!--Hero Section-->
     <main>
     <section id="home" class="hero">
+        <!--image/layout inspiration documented in readme file-->
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
