Add a line break to hero subtext

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
         <div class="container">
             <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding.
-            <h4 class="hero-p"> Solar Energy! Sustainable Solution to impact the world, abroad & beyond!</h4>
+            <h4 class="hero-p"> Solar Energy! Sustainable Solution to impact<br> the world, abroad & beyond!</h4>
             <button id="switch" onclick="toggleTheme()">Magic Button</button>
             <a class="hero-cta" href="#about" role="button">Learn More</a>  
         </div>
